--- a/src/common/header/header.css
+++ b/src/common/header/header.css
@@ -18,7 +18,15 @@
  @keyframes app-logo-spin {
     from { transform: scaleX(-1); }
  }
- .app-logo-text{
-    color: #fff;
-    background-color: rgb(100, 120, 238);
+ .modal-tabs{
+     margin: 20px;
  }
+ .dispNone{
+     display: none;
+ }
+ .dispBlock{
+    display: block;
+}
+.red{
+    color: red;
+}
