--- a/src/screens/details/details.css
+++ b/src/screens/details/details.css
@@ -87,3 +87,14 @@
       margin-right: 32px;
     }
   }
+  .back-btn{
+      margin: 10px;
+      padding: 5px;
+      text-align: center;
+      width: 150px;
+      color: #fff;
+      background-color: rgb(66, 214, 202);
+      border-radius: 1px solid #dcdcdc;
+      border-radius: 25px;
+      cursor: pointer;
+  }
